--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ matrix:
         - APCU_PECL_VERSION="apcu-4.0.8"
         - MEMCACHE_PECL_VERSION="memcache-2.2.7"
         - MEMCACHED_PECL_VERSION="memcached-2.2.0"
+        - REDIS_PECL_VERSION="redis-2.2.3"
         - TESTS_ZEND_CACHE_EXTMONGODB_ENABLED=false
         - TESTS_ZEND_CACHE_MEMCACHE_ENABLED=true
         - TESTS_ZEND_CACHE_XCACHE_ENABLED=true
@@ -56,6 +57,7 @@ matrix:
         - APCU_PECL_VERSION="apcu-4.0.10"
         - MEMCACHE_PECL_VERSION="memcache-3.0.7"
         - MEMCACHED_PECL_VERSION="memcached-2.2.0"
+        - REDIS_PECL_VERSION="redis-3.1.6"
         - TESTS_ZEND_CACHE_EXTMONGODB_ENABLED=false
         - TESTS_ZEND_CACHE_MEMCACHE_ENABLED=true
         - TESTS_ZEND_CACHE_XCACHE_ENABLED=true
@@ -65,6 +67,7 @@ matrix:
         - APCU_PECL_VERSION="apcu-4.0.11"
         - MEMCACHE_PECL_VERSION="memcache-3.0.8"
         - MEMCACHED_PECL_VERSION="memcached-2.2.0"
+        - REDIS_PECL_VERSION="redis-4.3.0"
         - TESTS_ZEND_CACHE_EXTMONGODB_ENABLED=false
         - TESTS_ZEND_CACHE_MEMCACHE_ENABLED=true
         - TESTS_ZEND_CACHE_XCACHE_ENABLED=true
@@ -73,6 +76,7 @@ matrix:
         - DEPS=lowest
         - APCU_PECL_VERSION="apcu-5.1.2"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.0"
+        - REDIS_PECL_VERSION="redis-4.0.0"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
         - TESTS_ZEND_CACHE_EXTMONGODB_ENABLED=false
     - php: 7
@@ -81,6 +85,7 @@ matrix:
         - LEGACY_DEPS="phpbench/phpbench phpunit/phpunit"
         - APCU_PECL_VERSION="apcu-5.1.8"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
+        - REDIS_PECL_VERSION="redis-5.0.0"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
         - TESTS_ZEND_CACHE_EXTMONGODB_ENABLED=false
     - php: 7
@@ -88,6 +93,7 @@ matrix:
         - DEPS=latest
         - APCU_PECL_VERSION="apcu"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
+        - REDIS_PECL_VERSION="redis-5.0.2"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
         - TESTS_ZEND_CACHE_EXTMONGODB_ENABLED=false
     - php: 7.1
@@ -95,6 +101,7 @@ matrix:
         - DEPS=lowest
         - APCU_PECL_VERSION="apcu-5.1.7"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
+        - REDIS_PECL_VERSION="redis-4.0.0"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.1
       env:
@@ -104,30 +111,35 @@ matrix:
         - TEST_COVERAGE=true
         - APCU_PECL_VERSION="apcu-5.1.8"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
+        - REDIS_PECL_VERSION="redis-5.0.0"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.1
       env:
         - DEPS=latest
         - APCU_PECL_VERSION="apcu"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
+        - REDIS_PECL_VERSION="redis-5.0.2"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.2
       env:
         - DEPS=lowest
         - APCU_PECL_VERSION="apcu-5.1.10"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
+        - REDIS_PECL_VERSION="redis-4.0.0"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.2
       env:
         - DEPS=locked
         - APCU_PECL_VERSION="apcu-5.1.10"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
+        - REDIS_PECL_VERSION="redis-5.0.0"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.2
       env:
         - DEPS=latest
         - APCU_PECL_VERSION="apcu"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
+        - REDIS_PECL_VERSION="redis-5.0.2"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
 
 before_install:
@@ -162,7 +174,7 @@ install:
     fi ;
 
   - if [[ $TESTS_ZEND_CACHE_REDIS_ENABLED == 'true' ]]; then
-        phpenv config-add .ci/redis.ini ;
+        echo "no" | pecl install -f $REDIS_PECL_VERSION ;
     fi ;
 
   - if [[ $TESTS_ZEND_CACHE_MEMCACHE_ENABLED == 'true' ]]; then
