--- a/.travis.yml
+++ b/.travis.yml
@@ -145,6 +145,7 @@ matrix:
         - APCU_PECL_VERSION="apcu-5.1.10"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
         - MEMCACHED_PECL_VERSION="memcached-3.1.2"
+        - REDIS_PECL_VERSION="redis-4.0.0"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.3
       env:
@@ -152,6 +153,7 @@ matrix:
         - APCU_PECL_VERSION="apcu-5.1.10"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.2"
         - MEMCACHED_PECL_VERSION="memcached-3.1.2"
+        - REDIS_PECL_VERSION="redis-5.0.0"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
     - php: 7.3
       env:
@@ -159,6 +161,7 @@ matrix:
         - APCU_PECL_VERSION="apcu"
         - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
         - MEMCACHED_PECL_VERSION="memcached-3.1.3"
+        - REDIS_PECL_VERSION="redis-5.0.2"
         - TESTS_ZEND_CACHE_MONGODB_USE_POLYFILL=true
 
 before_install:
