--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "laminas/laminas-cache-storage-adapter-memory": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-mongodb": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-redis": "1.0.0@dev || ^1.0",
+        "laminas/laminas-cache-storage-adapter-session": "1.0.0@dev || ^1.0",
         "laminas/laminas-eventmanager": "^2.6.3 || ^3.2",
         "laminas/laminas-servicemanager": "^2.7.8 || ^3.3",
         "laminas/laminas-stdlib": "^3.2.1",
@@ -62,8 +63,7 @@
     "suggest": {
         "ext-wincache": "WinCache, to use the WinCache storage adapter",
         "ext-xcache": "XCache, to use the XCache storage adapter",
-        "laminas/laminas-serializer": "Laminas\\Serializer component",
-        "laminas/laminas-session": "Laminas\\Session component"
+        "laminas/laminas-serializer": "Laminas\\Serializer component"
     },
     "autoload": {
         "files": [
