--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "laminas/laminas-cache-storage-adapter-memcache": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-memcached": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-memory": "1.0.0@dev || ^1.0",
+        "laminas/laminas-cache-storage-adapter-mongodb": "1.0.0@dev || ^1.0",
         "laminas/laminas-eventmanager": "^2.6.3 || ^3.2",
         "laminas/laminas-servicemanager": "^2.7.8 || ^3.3",
         "laminas/laminas-stdlib": "^3.2.1",
@@ -58,13 +59,11 @@
         "psr/simple-cache-implementation": "1.0"
     },
     "suggest": {
-        "ext-mongo": "Mongo, to use MongoDb storage adapter",
         "ext-redis": "Redis, to use Redis storage adapter",
         "ext-wincache": "WinCache, to use the WinCache storage adapter",
         "ext-xcache": "XCache, to use the XCache storage adapter",
         "laminas/laminas-serializer": "Laminas\\Serializer component",
-        "laminas/laminas-session": "Laminas\\Session component",
-        "mongofill/mongofill": "Alternative to ext-mongo - a pure PHP implementation designed as a drop in replacement"
+        "laminas/laminas-session": "Laminas\\Session component"
     },
     "autoload": {
         "files": [
