--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,10 @@
         "laminas/laminas-stdlib": "^3.2.1",
         "laminas/laminas-zendframework-bridge": "^1.0",
         "psr/cache": "^1.0",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "zendframework/zend-eventmanager": "^2.6.3 || ^3.2",
+        "zendframework/zend-servicemanager": "^2.7.8 || ^3.3",
+        "zendframework/zend-stdlib": "^3.2.1"
     },
     "require-dev": {
         "cache/integration-tests": "^0.16",
