--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "laminas/laminas-cache-storage-adapter-session": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-wincache": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-xcache": "1.0.0@dev || ^1.0",
+        "laminas/laminas-cache-storage-adapter-zend-server": "1.0.0@dev || ^1.0",
         "laminas/laminas-eventmanager": "^2.6.3 || ^3.2",
         "laminas/laminas-servicemanager": "^2.7.8 || ^3.3",
         "laminas/laminas-stdlib": "^3.2.1",
