--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "laminas/laminas-cache-storage-adapter-apc": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-apcu": "^1.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-blackhole": "^1.0@dev || ^1.0",
+        "laminas/laminas-cache-storage-adapter-dba": "^1.0@dev || ^1.0",
         "laminas/laminas-eventmanager": "^2.6.3 || ^3.2",
         "laminas/laminas-servicemanager": "^2.7.8 || ^3.3",
         "laminas/laminas-stdlib": "^3.2.1",
@@ -52,7 +53,6 @@
         "psr/simple-cache-implementation": "1.0"
     },
     "suggest": {
-        "ext-dba": "DBA, to use the DBA storage adapter",
         "ext-memcache": "Memcache >= 2.0.0 to use the Memcache storage adapter",
         "ext-memcached": "Memcached >= 1.0.0 to use the Memcached storage adapter",
         "ext-mongo": "Mongo, to use MongoDb storage adapter",
