--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "laminas/laminas-cache-storage-adapter-dba": "^1.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-ext-mongodb": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-filesystem": "1.0.0@dev || ^1.0",
+        "laminas/laminas-cache-storage-adapter-memcache": "1.0.0@dev || ^1.0",
         "laminas/laminas-eventmanager": "^2.6.3 || ^3.2",
         "laminas/laminas-servicemanager": "^2.7.8 || ^3.3",
         "laminas/laminas-stdlib": "^3.2.1",
@@ -55,7 +56,6 @@
         "psr/simple-cache-implementation": "1.0"
     },
     "suggest": {
-        "ext-memcache": "Memcache >= 2.0.0 to use the Memcache storage adapter",
         "ext-memcached": "Memcached >= 1.0.0 to use the Memcached storage adapter",
         "ext-mongo": "Mongo, to use MongoDb storage adapter",
         "ext-redis": "Redis, to use Redis storage adapter",
