--- a/composer.json
+++ b/composer.json
@@ -37,15 +37,13 @@
         "laminas/laminas-cache-storage-adapter-filesystem": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-memcache": "1.0.0@dev || ^1.0",
         "laminas/laminas-cache-storage-adapter-memcached": "1.0.0@dev || ^1.0",
+        "laminas/laminas-cache-storage-adapter-memory": "1.0.0@dev || ^1.0",
         "laminas/laminas-eventmanager": "^2.6.3 || ^3.2",
         "laminas/laminas-servicemanager": "^2.7.8 || ^3.3",
         "laminas/laminas-stdlib": "^3.2.1",
         "laminas/laminas-zendframework-bridge": "^1.0",
         "psr/cache": "^1.0",
-        "psr/simple-cache": "^1.0",
-        "zendframework/zend-eventmanager": "^2.6.3 || ^3.2",
-        "zendframework/zend-servicemanager": "^2.7.8 || ^3.3",
-        "zendframework/zend-stdlib": "^3.2.1"
+        "psr/simple-cache": "^1.0"
     },
     "require-dev": {
         "cache/integration-tests": "^0.16",
