--- a/composer.json
+++ b/composer.json
@@ -29,21 +29,21 @@
     },
     "require": {
         "php": "^5.6 || ^7.0",
-        "laminas/laminas-cache-storage-adapter-apc": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-apcu": "^1.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-blackhole": "^1.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-dba": "^1.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-ext-mongodb": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-filesystem": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-memcache": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-memcached": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-memory": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-mongodb": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-redis": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-session": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-wincache": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-xcache": "1.0.0@dev || ^1.0",
-        "laminas/laminas-cache-storage-adapter-zend-server": "1.0.0@dev || ^1.0",
+        "laminas/laminas-cache-storage-adapter-apc": "^1.0",
+        "laminas/laminas-cache-storage-adapter-apcu": "^1.0",
+        "laminas/laminas-cache-storage-adapter-blackhole": "^1.0",
+        "laminas/laminas-cache-storage-adapter-dba": "^1.0",
+        "laminas/laminas-cache-storage-adapter-ext-mongodb": "^1.0",
+        "laminas/laminas-cache-storage-adapter-filesystem": "^1.0",
+        "laminas/laminas-cache-storage-adapter-memcache": "^1.0",
+        "laminas/laminas-cache-storage-adapter-memcached": "^1.0",
+        "laminas/laminas-cache-storage-adapter-memory": "^1.0",
+        "laminas/laminas-cache-storage-adapter-mongodb": "^1.0",
+        "laminas/laminas-cache-storage-adapter-redis": "^1.0",
+        "laminas/laminas-cache-storage-adapter-session": "^1.0",
+        "laminas/laminas-cache-storage-adapter-wincache": "^1.0",
+        "laminas/laminas-cache-storage-adapter-xcache": "^1.0",
+        "laminas/laminas-cache-storage-adapter-zend-server": "^1.0",
         "laminas/laminas-eventmanager": "^2.6.3 || ^3.2",
         "laminas/laminas-servicemanager": "^2.7.8 || ^3.3",
         "laminas/laminas-stdlib": "^3.2.1",
