--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         "laminas/laminas-coding-standard": "~1.0.0",
         "laminas/laminas-serializer": "^2.6",
         "phpbench/phpbench": "^0.13",
-        "phpunit/phpunit": "^5.7.27 || ^6.5.8 || ^7.1.2"
+        "phpunit/phpunit": "^6.5.8 || ^7.1.2"
     },
     "provide": {
         "psr/cache-implementation": "1.0",
