--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "laminas/laminas-stdlib": "^3.2.1",
         "laminas/laminas-zendframework-bridge": "^1.0",
         "psr/cache": "^1.0",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "webmozart/assert": "^1.9"
     },
     "require-dev": {
         "cache/integration-tests": "^0.16",
@@ -66,9 +67,6 @@
         "laminas/laminas-serializer": "Laminas\\Serializer component"
     },
     "autoload": {
-        "files": [
-            "autoload/patternPluginManagerPolyfill.php"
-        ],
         "psr-4": {
             "Laminas\\Cache\\": "src/"
         }
