--- a/.travis.yml
+++ b/.travis.yml
@@ -8,43 +8,32 @@ env:
   global:
     - COMPOSER_ARGS="--no-interaction"
     - COVERAGE_DEPS="php-coveralls/php-coveralls"
-    - TESTS_LAMINAS_CACHE_FILESYSTEM_DIR=/dev/shm
 
 matrix:
   fast_finish: true
   include:
-    - php: 5.6
+    - php: 7.3
       env:
         - DEPS=lowest
-    - php: 5.6
+    - php: 7.3
       env:
         - DEPS=latest
-    - php: 7
+    - php: 7.4
       env:
         - DEPS=lowest
-    - php: 7
-      env:
-        - DEPS=latest
-    - php: 7.1
-      env:
-        - DEPS=lowest
-    - php: 7.1
+    - php: 7.4
       env:
         - DEPS=latest
         - CS_CHECK=true
         - BENCHMARKS=true
         - TEST_COVERAGE=true
-    - php: 7.2
+    - php: nightly
       env:
+        - COMPOSER_ARGS="$COMPOSER_ARGS --ignore-platform-reqs"
         - DEPS=lowest
-    - php: 7.2
+    - php: nightly
       env:
-        - DEPS=latest
-    - php: 7.3
-      env:
-        - DEPS=lowest
-    - php: 7.3
-      env:
+        - COMPOSER_ARGS="$COMPOSER_ARGS --ignore-platform-reqs"
         - DEPS=latest
 
 before_install:
