--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
     },
     "require-dev": {
         "cache/integration-tests": "^0.16",
-        "laminas/laminas-coding-standard": "~1.0.0",
+        "laminas/laminas-coding-standard": "^2.1",
         "laminas/laminas-serializer": "^2.6",
         "phpbench/phpbench": "^0.17.1",
         "phpunit/phpunit": "^9.4"
