Specify cache storage adapters as suggestions rather than requirements
Developer Certificate of Origin
Version 1.1

Copyright (C) 2004, 2006 The Linux Foundation and its contributors.
1 Letterman Drive
Suite D4700
San Francisco, CA, 94129

Everyone is permitted to copy and distribute verbatim copies of this
license document, but changing it is not allowed.

Developer's Certificate of Origin 1.1

By making a contribution to this project, I certify that:

(a) The contribution was created in whole or in part by me and I
    have the right to submit it under the open source license
    indicated in the file; or

(b) The contribution is based upon previous work that, to the best
    of my knowledge, is covered under an appropriate open source
    license and I have the right under that license to submit that
    work with modifications, whether created in whole or in part
    by me, under the same open source license (unless I am
    permitted to submit under a different license), as indicated
    in the file; or

(c) The contribution was provided directly to me by some other
    person who certified (a), (b) or (c) and I have not modified
    it.

(d) I understand and agree that this project and the contribution
    are public and that a record of the contribution (including all
    personal information I submit with it, including my sign-off) is
    maintained indefinitely and may be redistributed consistent with
    this project or the open source license(s) involved.

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,15 @@
     },
     "require": {
         "php": "^7.3 || ~8.0.0",
+        "laminas/laminas-eventmanager": "^3.2",
+        "laminas/laminas-servicemanager": "^3.4",
+        "laminas/laminas-stdlib": "^3.2.1",
+        "psr/cache": "^1.0",
+        "psr/simple-cache": "^1.0",
+        "webmozart/assert": "^1.9"
+    },
+    "require-dev": {
+        "cache/integration-tests": "^0.16",
         "laminas/laminas-cache-storage-adapter-apc": "^1.0",
         "laminas/laminas-cache-storage-adapter-apcu": "^1.0",
         "laminas/laminas-cache-storage-adapter-blackhole": "^1.0",
@@ -44,15 +53,6 @@
         "laminas/laminas-cache-storage-adapter-wincache": "^1.0",
         "laminas/laminas-cache-storage-adapter-xcache": "^1.0",
         "laminas/laminas-cache-storage-adapter-zend-server": "^1.0",
-        "laminas/laminas-eventmanager": "^3.2",
-        "laminas/laminas-servicemanager": "^3.4",
-        "laminas/laminas-stdlib": "^3.2.1",
-        "psr/cache": "^1.0",
-        "psr/simple-cache": "^1.0",
-        "webmozart/assert": "^1.9"
-    },
-    "require-dev": {
-        "cache/integration-tests": "^0.16",
         "laminas/laminas-coding-standard": "^2.1",
         "laminas/laminas-serializer": "^2.6",
         "phpbench/phpbench": "^0.17.1",
@@ -63,7 +63,22 @@
         "psr/simple-cache-implementation": "1.0"
     },
     "suggest": {
-        "laminas/laminas-serializer": "Laminas\\Serializer component"
+        "laminas/laminas-serializer": "Laminas\\Serializer component",
+        "laminas/laminas-cache-storage-adapter-apc": "Laminas\\Cache\\Storage\\Adapter\\Apc storage adapter",
+        "laminas/laminas-cache-storage-adapter-apcu": "Laminas\\Cache\\Storage\\Adapter\\Apcu storage adapter",
+        "laminas/laminas-cache-storage-adapter-blackhole": "Laminas\\Cache\\Storage\\Adapter\\Blackhole storage adapter",
+        "laminas/laminas-cache-storage-adapter-dba": "Laminas\\Cache\\Storage\\Adapter\\Dba storage adapter",
+        "laminas/laminas-cache-storage-adapter-ext-mongodb": "Laminas\\Cache\\Storage\\Adapter\\ExtMongoDb storage adapter",
+        "laminas/laminas-cache-storage-adapter-filesystem": "Laminas\\Cache\\Storage\\Adapter\\Filesystem storage adapter",
+        "laminas/laminas-cache-storage-adapter-memcache": "Laminas\\Cache\\Storage\\Adapter\\Memcache storage adapter",
+        "laminas/laminas-cache-storage-adapter-memcached": "Laminas\\Cache\\Storage\\Adapter\\Memcached storage adapter",
+        "laminas/laminas-cache-storage-adapter-memory": "Laminas\\Cache\\Storage\\Adapter\\Memory storage adapter",
+        "laminas/laminas-cache-storage-adapter-mongodb": "Laminas\\Cache\\Storage\\Adapter\\MongoDb storage adapter",
+        "laminas/laminas-cache-storage-adapter-redis": "Laminas\\Cache\\Storage\\Adapter\\Redis storage adapter",
+        "laminas/laminas-cache-storage-adapter-session": "Laminas\\Cache\\Storage\\Adapter\\Session storage adapter",
+        "laminas/laminas-cache-storage-adapter-wincache": "Laminas\\Cache\\Storage\\Adapter\\WinCache storage adapter",
+        "laminas/laminas-cache-storage-adapter-xcache": "Laminas\\Cache\\Storage\\Adapter\\XCache storage adapter",
+        "laminas/laminas-cache-storage-adapter-zend-server": "Laminas\\Cache\\Storage\\Adapter\\ZendServer storage adapter"
     },
     "autoload": {
         "psr-4": {
