--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
         }
     },
     "scripts": {
+        "benchmark": "phpbench run --revs=2 --iterations=2 --report=aggregate",
         "check": [
             "@cs-check",
             "@test"
