--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "laminas/laminas-coding-standard": "~1.0.0",
         "laminas/laminas-serializer": "^2.6",
         "phpbench/phpbench": "^0.17.1",
+        "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.5"
     },
     "provide": {
