--- a/composer.json
+++ b/composer.json
@@ -44,9 +44,9 @@
         "laminas/laminas-cache-storage-adapter-wincache": "^1.0",
         "laminas/laminas-cache-storage-adapter-xcache": "^1.0",
         "laminas/laminas-cache-storage-adapter-zend-server": "^1.0",
-        "laminas/laminas-eventmanager": "^2.6.3 || ^3.2",
-        "laminas/laminas-servicemanager": "^2.7.8 || ^3.3",
-        "laminas/laminas-stdlib": "^3.2.1",
+        "laminas/laminas-eventmanager": "^3.3",
+        "laminas/laminas-servicemanager": "^3.6",
+        "laminas/laminas-stdlib": "^3.3",
         "laminas/laminas-zendframework-bridge": "^1.0",
         "psr/cache": "^1.0",
         "psr/simple-cache": "^1.0"
