--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "psr/simple-cache": "^1.0"
     },
     "require-dev": {
+        "laminas/laminas-cli": "^1.0",
         "laminas/laminas-coding-standard": "~1.0.0",
         "laminas/laminas-serializer": "^2.6",
         "phpbench/phpbench": "^1.0.0-beta2",
@@ -63,6 +64,7 @@
         "psr/simple-cache-implementation": "1.0"
     },
     "suggest": {
+        "laminas/laminas-cli": "The laminas-cli binary can be used to consume commands provided by this component",
         "laminas/laminas-serializer": "Laminas\\Serializer component"
     },
     "autoload": {
