feat: configuration deprecation check command
Providing a deprecation check command for upstream projects. Deprecated configurations can be fixed before upgrading to the next major version.

Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,9 @@
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.5"
     },
+    "conflict": {
+        "symfony/console": "<5.1"
+    },
     "provide": {
         "psr/cache-implementation": "1.0",
         "psr/simple-cache-implementation": "1.0"
